--- a/components/about/about.html
+++ b/components/about/about.html
@@ -2,22 +2,22 @@
     <div class="container">
         <div class="about-grid">
             <div class="about-image">
-                <img src="assets/images/profile.jpg" alt="Ical Zalfa" id="profile-img">
+                <img src="assets/images/profile.jpg" alt="Alejandro Cabana" id="profile-img">
             </div>
             <div class="about-content">
                 <h2 class="about-greeting">HELLO!</h2>
                 <p class="about-text">
-                    My Name is <strong>Zalfa Aethra Jauza (SDes)</strong>. But people called me <strong class="highlight">Ical</strong>.
-                    I am a Graphic Designing based in Indonesia. I have been working as a freelance graphic designer 
-                    for about 5 years. I love art and visual things. I usually work on projects like branding, logo design, 
-                    social media design, poster design, and layouting. I am passionate about pushing the boundaries 
-                    of design and exploring new skills.
+                    My Name is <strong>Alejandro Cabana</strong>. But people called me <strong class="highlight">Alex</strong>.
+                    I am a Web Developer based in Peru. I have been working as a freelance developer 
+                    for about 5 years. I love technology and creating amazing digital experiences. I usually work on projects like 
+                    web applications, responsive design, backend development, and UI/UX implementation. I am passionate about pushing the boundaries 
+                    of web development and exploring new technologies.
                 </p>
                 <div class="about-contact">
-                    <a href="mailto:aethra.jauza@gmail.com" class="contact-btn">aethra.jauza@gmail.com</a>
-                    <a href="https://behance.net/icalzalfa" class="contact-btn" target="_blank">behance.net/icalzalfa</a>
-                    <a href="#" class="contact-btn">@icalzalfaa</a>
-                    <a href="tel:+6285960355213" class="contact-btn">(+62) 859-6035-5213</a>
+                    <a href="mailto:alejandro@example.com" class="contact-btn">alejandro@example.com</a>
+                    <a href="https://github.com/alexcabana" class="contact-btn" target="_blank">github.com/alexcabana</a>
+                    <a href="#" class="contact-btn">@alexcabana</a>
+                    <a href="tel:+51999999999" class="contact-btn">(+51) 999-999-999</a>
                 </div>
             </div>
         </div>
