--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -2,16 +2,15 @@
     <div class="container">
         <div class="footer-content">
             <div class="footer-info">
-                <h4 class="footer-name">Ical Zalfa</h4>
-                <p class="footer-role">Graphic Designer</p>
+                <h4 class="footer-name">Alejandro Cabana</h4>
+                <p class="footer-role">Web Developer</p>
                 <p class="footer-description">
-                    This portfolio contains some of my work and assignments.
+                    This portfolio contains some of my work and projects.
                 </p>
             </div>
             <div class="footer-credits">
-                <p>Text in set in this portfolio.</p>
-                <p>Thunder by Rajesh Rajput</p>
-                <p>Urbanist by Corey Hu</p>
+                <p>Built with passion and dedication.</p>
+                <p>Powered by pure HTML, CSS & JavaScript</p>
                 <p class="copyright">Copyright © 2024</p>
             </div>
         </div>
