--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -3,10 +3,10 @@
         <div class="hero-content">
             <span class="hero-updated">Updated</span>
             <h1 class="hero-title">PORTFOLIO</h1>
-            <span class="hero-year">2024</span>
+            <span class="hero-year" id="current-year"></span>
             <div class="hero-subtitle">
-                <span>Graphic Design</span>
-                <span>Ical Zalfa</span>
+                <span>Web Developer</span>
+                <span>Alejandro Cabana</span>
             </div>
         </div>
     </div>
